cleaning up som completion suggestions logic